11_thanos/02-thanos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: thanos-query.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanos-query
                port:
                  number: 10902
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: minio-console.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
